--- a/memory_game/.vscode/settings.json
+++ b/memory_game/.vscode/settings.json
@@ -17,6 +17,12 @@
     "tuple": "c",
     "type_traits": "c",
     "utility": "c",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "delay.h": "c",
+    "future": "c",
+    "compare": "c",
+    "cstdint": "c",
+    "hash_map": "c",
+    "hash_set": "c"
   }
 }
